--- a/Game4InARow/power4JS_V0.css
+++ b/Game4InARow/power4JS_V0.css
@@ -1,10 +1,15 @@
+html {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: whitesmoke;
     font-family: monospace;
-
 }
 
 h1 {
